--- a/css/styles.css
+++ b/css/styles.css
@@ -340,6 +340,8 @@ body
 
  .backdrop.is-hidden .modal{
    transform:perspective(600px) translate(-50% , -50%) rotateX(45deg) scale(0.5);
+
+   
    
 
  }
@@ -354,10 +356,13 @@ body
    left: 50%;
    width: 528px;
    height: 581px;
-   transform:perspective(600px) translate(-50%,-50%) rotateX(0deg) scale(1);
+
+   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+   border-radius: 4px;
 
    background-color: var(--background-body);
 
+   transform:perspective(600px) translate(-50%,-50%) rotateX(0deg) scale(1);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
  }
 
