--- a/css/styles.css
+++ b/css/styles.css
@@ -286,6 +286,16 @@ body
 
 .hero-button
 {
+   margin-left: auto;
+   margin-right: auto;
+   margin-top: 30px;
+   padding-top: 10px;
+   padding-bottom: 10px;
+
+
+   width: 200px;
+   height: 50px;
+
    font-family: inherit;
    font-weight: 700;
    font-size: 16px;
@@ -303,17 +313,12 @@ body
 
    cursor:pointer;
 
-   margin-left: auto;
-   margin-right: auto;
-   margin-top: 30px;
-   padding-top: 10px;
-   padding-bottom: 10px;
-   padding-left: 32px;
-   padding-right: 32px;
+  
 
    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
 }
+
 .hero-button:focus ,
 .hero-button:hover
 {
@@ -387,6 +392,93 @@ body
    color: #000000;
 
  }
+.modal-description{
+   margin: 40px 40px 0 40px;
+   display: block;
+   font-weight: 700;
+   font-size: 20px;
+   line-height: 23px;
+   text-align: center;
+   letter-spacing: 0.03em;
+
+   color: #212121;
+}
+ .modal-form{
+   margin-top: 12px;
+   display: flex;
+   flex-direction: column;
+   align-content: center;
+ }
+ .modal-form>label {
+   margin-bottom: 4px;
+   margin-left: 40px;
+   margin-right: 40px;
+   color: var(--body-color);
+
+   font-weight: 400;
+   font-size: 12px;
+   line-height: 14px;
+   letter-spacing: 0.01em;
+ }
+   
+ .modal-form>label:last-of-type{
+   margin-bottom: 30px;
+
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 1.71;
+   letter-spacing: 0.03em;
+ }
+ 
+ .modal-form-field{
+   position: relative;
+   margin-left: 40px;
+   margin-right: 40px;
+   margin-bottom: 10px;
+ }
+
+ .modal-form-icon{
+   position: absolute;
+   top: 12px;
+   left: 11px;
+
+   fill: var(--titles-color);
+ }
+
+ .modal-form-field>input{
+   padding: 12px 0 12px 42px;
+   width: 448px;
+   height: 40px;
+
+   border: 1px solid rgba(33, 33, 33, 0.2);
+   border-radius: 4px;
+ }
+ .modal-form>textarea{
+   margin-left: 40px;
+   margin-right: 40px;
+   margin-bottom: 20px;
+   padding: 12px 16px;
+ }
+ 
+ .modal-button{
+   margin-top: 0px ;
+ }
+
+ .comment-area{
+   display: block;
+   width: 448px;
+   height: 120px;
+   resize: none;
+
+   border: 1px solid rgba(33, 33, 33, 0.2);
+   border-radius: 4px;  
+ }
+
+ .modal-check-decoration{
+   color: #2196F3;
+   text-decoration-line: underline;
+ }
+
 .section
 {
    padding: 94px 0;
