--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@
    
 }
 
-.header-nav-container{
+.header-nav-container{иу
    display: flex;
    align-items: center;
 }
@@ -369,6 +369,8 @@ body
 
    transform:perspective(600px) translate(-50%,-50%) rotateX(0deg) scale(1);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+
+   z-index: 2;
  }
 
  
@@ -387,11 +389,24 @@ body
    background-color: inherit;
    border: 1px solid rgba(0, 0, 0, 0.1);
    cursor: pointer;
- }
- .close-modal-icon{
-   color: #000000;
 
+   fill: #000000;
+
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
+
+ .close-modal:focus ,
+ .close-modal:hover
+ {
+   fill: #2196F3 ;
+ }
+
+
+ 
+
+
+
+
 .modal-description{
    margin: 40px 40px 0 40px;
    display: block;
@@ -421,14 +436,7 @@ body
    letter-spacing: 0.01em;
  }
    
- .modal-form>label:last-of-type{
-   margin-bottom: 30px;
 
-   font-weight: 400;
-   font-size: 14px;
-   line-height: 1.71;
-   letter-spacing: 0.03em;
- }
  
  .modal-form-field{
    position: relative;
@@ -443,6 +451,8 @@ body
    left: 11px;
 
    fill: var(--titles-color);
+
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .modal-form-field>input{
@@ -452,17 +462,35 @@ body
 
    border: 1px solid rgba(33, 33, 33, 0.2);
    border-radius: 4px;
+   cursor: pointer;
+
+   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
+ 
+ .modal-form-field>input:focus {
+   outline: none;
+   border: 1px solid #2196F3;
+   
+ }
+ .modal-form-field>input:focus + .modal-form-icon{
+   fill: #2196F3;
+ }
+ 
  .modal-form>textarea{
    margin-left: 40px;
    margin-right: 40px;
    margin-bottom: 20px;
    padding: 12px 16px;
+
+   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  
- .modal-button{
-   margin-top: 0px ;
+ .modal-form>textarea:focus{
+   outline: none;
+   border: 1px solid #2196F3;
+
  }
+ 
 
  .comment-area{
    display: block;
@@ -477,7 +505,51 @@ body
  .modal-check-decoration{
    color: #2196F3;
    text-decoration-line: underline;
+   margin-left: 4px;
  }
+
+ .modal-form-chekbox{
+   margin-bottom: 30px;
+   margin-left: auto;
+   margin-right: auto;
+   display: flex;
+   align-items: center;
+
+ }
+ 
+ .modal-form-chekbox>label{
+   position: relative;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+
+ .check-icon{
+   width: 16px;
+   height: 15px;
+   background-size: contain;
+
+   margin-right: 8px;
+   background-image: url(../images/svg-icons/Vector.svg);
+
+   transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+   background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ,
+   border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+ .checkbox{
+   appearance: none;
+ }
+ .checkbox:checked+.check-icon{
+   background-image: url(../images/svg-icons/icon\ check.svg);
+   background-color: var(--background-focus-button);
+   border-radius: 2px;
+
+ }
+ .modal-button{
+   margin-top: 0px ;
+ }
+
+
 
 .section
 {
@@ -581,6 +653,7 @@ body
 
 .examples-opacity{
    position: relative;
+   z-index: 1;
    
 }
 
