ready for check 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
    --h-color:#000000;
    --titles-color:#212121;
    --title-hero:#FFFFFF;
-   --logo-footer:#ffffff;
+   --logo-footer:sign-up-input#ffffff;
    --map-color:#ffffff;
 
    --background-body:#ffffff;
@@ -87,7 +87,7 @@
    
 }
 
-.header-nav-container{иу
+.header-nav-container{
    display: flex;
    align-items: center;
 }
@@ -424,10 +424,9 @@ body
    flex-direction: column;
    align-content: center;
  }
- .modal-form>label {
+ .modal-form label {
    margin-bottom: 4px;
-   margin-left: 40px;
-   margin-right: 40px;
+   display: block;
    color: var(--body-color);
 
    font-weight: 400;
@@ -447,7 +446,7 @@ body
 
  .modal-form-icon{
    position: absolute;
-   top: 12px;
+   bottom: 12px;
    left: 11px;
 
    fill: var(--titles-color);
@@ -467,25 +466,26 @@ body
    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  
- .modal-form-field>input:focus {
+ .modal-form-field>input:focus,
+ .modal-form-field>input:hover {
    outline: none;
    border: 1px solid #2196F3;
    
  }
- .modal-form-field>input:focus + .modal-form-icon{
+ .modal-form-field>input:focus + .modal-form-icon,
+ .modal-form-field>input:hover + .modal-form-icon
+ {
    fill: #2196F3;
  }
  
- .modal-form>textarea{
-   margin-left: 40px;
-   margin-right: 40px;
-   margin-bottom: 20px;
+ .modal-form textarea{
+   
    padding: 12px 16px;
-
+  cursor: pointer;
    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  
- .modal-form>textarea:focus{
+ .modal-form textarea:focus{
    outline: none;
    border: 1px solid #2196F3;
 
@@ -502,10 +502,24 @@ body
    border-radius: 4px;  
  }
 
+ .modal-contract-description{
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  
+  color: #757575;
+ }
+
  .modal-check-decoration{
    color: #2196F3;
    text-decoration-line: underline;
    margin-left: 4px;
+
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 24px;
+   letter-spacing: 0.03em;
  }
 
  .modal-form-chekbox{
@@ -525,6 +539,8 @@ body
  }
 
  .check-icon{
+   position: relative;
+   top: -2px;
    width: 16px;
    height: 15px;
    background-size: contain;
@@ -1064,10 +1080,12 @@ justify-content: center;
    height: 50px;
    padding: 15px 0px 15px 16px;
 
+   color:#FFFFFF;
    background: var(--background-footer);
    border: 1px solid rgba(255, 255, 255, 0.3);
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
    border-radius: 4px;
+   outline:none;
    
 }
 
