--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
    --h-color:#000000;
    --titles-color:#212121;
    --title-hero:#FFFFFF;
-   --logo-footer:sign-up-input#ffffff;
+   --logo-footer:#ffffff;
    --map-color:#ffffff;
 
    --background-body:#ffffff;
@@ -340,6 +340,8 @@ body
 
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) ,  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
    perspective:600px;
+
+   z-index: 1;
    
  }
 
@@ -362,6 +364,9 @@ body
    width: 528px;
    height: 581px;
 
+   padding: 40px;
+
+
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
 
@@ -370,7 +375,7 @@ body
    transform:perspective(600px) translate(-50%,-50%) rotateX(0deg) scale(1);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 
-   z-index: 2;
+  
  }
 
  
@@ -408,7 +413,7 @@ body
 
 
 .modal-description{
-   margin: 40px 40px 0 40px;
+   
    display: block;
    font-weight: 700;
    font-size: 20px;
@@ -439,10 +444,15 @@ body
  
  .modal-form-field{
    position: relative;
-   margin-left: 40px;
-   margin-right: 40px;
+  
    margin-bottom: 10px;
  }
+
+ .modal-form-field:nth-child(4){
+  position: relative;
+  
+  margin-bottom: 20px;
+}
 
  .modal-form-icon{
    position: absolute;
@@ -527,7 +537,7 @@ body
    margin-left: auto;
    margin-right: auto;
    display: flex;
-   align-items: center;
+   justify-content: center;
 
  }
  
@@ -669,7 +679,7 @@ body
 
 .examples-opacity{
    position: relative;
-   z-index: 1;
+   
    
 }
 
@@ -1059,7 +1069,7 @@ justify-content: center;
 }
 
 .sign-up{
-   margin-left: 93px;
+   margin-left: auto;
 }
 
 .form-block{
